feat: dtos de resposta atualizados para record